lang/macro/tests/ui/fail/C-01-constructor-self-mut.stderr
error: ink! constructors must have no `self` receiver
  --> $DIR/C-01-constructor-self-mut.rs:10:29
   |
10 |         pub fn self_mut_arg(&mut self) -> Self {
   |                             ^^^^^^^^^
